# app

./: .gitignore  README.md
QtObjects/QtGoogleGemini/Gemini/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
_shell_env/: config
cmake/: .config.cmake
shell-env/: config
src/: Makefile  ggai.c  strcov.c
trans-doc/: ip.Ch  ip.En  printf.En  sprintf.Ch  sprintf.En  tcp.En  udp.En  vim.Ch  vim.En  vsprintf.En
